--- a/pwm/servlet/web/resources/pwmStyle.css
+++ b/pwm/servlet/web/resources/pwmStyle.css
@@ -28,7 +28,7 @@ hr { float: none; width:100px; position:relative; margin-left:5px; margin-top: 3
 
 h1 { font-size:16px; }
 h2 { font-size:14px; }
-h2 { font-size:12px; }
+h3 { font-size:12px; }
 
 table { border-collapse:collapse;  border: 2px solid #D4D4D4; width:100%; margin-left: auto; margin-right: auto }
 table td { border: 1px solid #D4D4D4; padding-left: 5px;}
@@ -52,6 +52,12 @@ table td.key { text-align:right; font-weight:bold; padding-right: 10px }
 #vertgraph ul       { width: 28px !important; height: 207px; margin: 0; padding: 0; }
 #vertgraph ul li    { width: 28px !important; position: absolute; height: 160px; bottom: 0px; padding: 0 !important; margin: 0 !important; background: url("progress_bar_bg.jpg") no-repeat !important; text-align: center; font-weight: bold; color: white; line-height: 2.5em; }
 #vertgraph li.bar   { left: 0px; background-position: 0px bottom !important; }
+.strengthdisplay    { float: none; margin-top: 65px; margin-left: 30%; margin-right: 30%; text-align:center; font-size: 85%; }
+
+/* header stuff */
+#header         { width: 100%; height: 70px; margin: 0; background-image:url('header-gradient.gif') }
+#header-page    { width:600px; padding-top:9px; margin-left: auto; margin-right: auto; font-family:Trebuchet MS, sans-serif; font-size:22px; color:#FFFFFF; }
+#header-title   { width:600px; margin: auto; font-family:Trebuchet MS, sans-serif; font-size:14px; color:#FFFFFF; }
 
 .clear { clear:both; }
 
