--- a/pwm/servlet/web/resources/pwmMobileStyle.css
+++ b/pwm/servlet/web/resources/pwmMobileStyle.css
@@ -30,6 +30,8 @@ h1 { font-size:18px; margin-left: 5px; }
 h2 { font-size:16px; margin-left: 5px; }
 h3 { font-size:14px; margin-left: 5px; }
 
+select { font-family:Trebuchet MS, sans-serif }
+
 table { border-collapse:collapse;  border: 2px solid #D4D4D4; width:100%; margin-left: auto; margin-right: auto }
 table td { border: 1px solid #D4D4D4; padding-left: 5px;}
 table td.title { text-align:center; font-weight: bold; font-size: 150%; padding-right: 10px; background-color:#DDDDDD }
