--- a/pwm/servlet/web/resources/pwmMobileStyle.css
+++ b/pwm/servlet/web/resources/pwmMobileStyle.css
@@ -57,6 +57,8 @@ div.progress-container > div { background-color: #ffffff; height: 10px; }
 #header         { width:100%; height: 70px; margin: 0; background-image:url('header-gradient.gif') }
 #header-page    { width:100%; text-align: center; padding-top:9px; margin-left: auto; margin-right: auto; font-family:Trebuchet MS, sans-serif; font-size:22px; color:#FFFFFF; }
 #header-title   { width:100%; text-align: center; margin: auto; font-family:Trebuchet MS, sans-serif; font-size:14px; color:#FFFFFF; }
+#header-warning { width:100%; background-color:#FFCD59; text-align:center; }
+
 
 .clear { clear:both; }
 
