--- a/pwm/servlet/web/resources/pwmStyle.css
+++ b/pwm/servlet/web/resources/pwmStyle.css
@@ -42,6 +42,7 @@ table td.key { text-align:right; font-weight:bold; padding-right: 10px; width: 2
 /* main body wrapper, all elements (except footer) should be within wrapper */
 #wrapper { width:100%; min-height: 100%; height: auto !important; height: 100%; margin: 0; }
 
+
 /* main content section, all content should be inside a centerbody div */
 #centerbody { width:600px; min-width:600px; padding:0; position:relative; ; margin-left:auto; margin-right:auto; margin-top: 10px; clear:both; padding-bottom:40px;}
 
@@ -57,6 +58,7 @@ div.progress-container > div { background-color: #ffffff; height: 10px; }
 #header         { width: 100%; height: 70px; margin: 0; background-image:url('header-gradient.gif') }
 #header-page    { width:600px; padding-top:9px; margin-left: auto; margin-right: auto; font-family:Trebuchet MS, sans-serif; font-size:22px; color:#FFFFFF; }
 #header-title   { width:600px; margin: auto; font-family:Trebuchet MS, sans-serif; font-size:14px; color:#FFFFFF; }
+#header-warning { width:100%; background-color:#FFCD59; text-align:center; padding-top:4px; padding-bottom:4px }
 
 .clear { clear:both; }
 
