make footer locale link an <a> element

--- a/pwm/servlet/web/public/resources/style.css
+++ b/pwm/servlet/web/public/resources/style.css
@@ -622,6 +622,8 @@ select {
 #localeSelectionMenu {
     white-space: nowrap;
     cursor: pointer;
+    text-decoration: none;
+    font-weight: normal;
 }
 
 .login-wrapper {
