Removed font-awesome CSS classes.
Changed all references from "fa" and "fa=*" to "pwm-icon" and "pwm-*".

--- a/src/main/webapp/public/resources/configStyle.css
+++ b/src/main/webapp/public/resources/configStyle.css
@@ -83,12 +83,12 @@ body {
     cursor: pointer;
 }
 
-.fa-question-circle {
+.pwm-question-circle {
     border-bottom-right-radius: 3px;
     box-shadow: 2px 2px 2px 2px #bfbfbf;
 }
 
-.fa-reply {
+.pwm-reply {
     color: #920000;
     visibility: hidden;
     border-bottom-right-radius: 3px;
